fix:invariantの生成ロジックと混合テストの修正